kubernetes/api-stage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  labels:
    app: api-stage
  name: api-stage
  namespace: gabl-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-stage
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      labels:
        app: api-stage
    spec:
      containers:
        - env:
          - name: NODE_ENV
            value: production
          - name: MONGODB_URI
            valueFrom:
              secretKeyRef:
                name: mongodb-stage
                key: MONGODB_URI
          - name: STORAGE_KEY
            valueFrom:
              secretKeyRef:
                name: storage-key
                key: STORAGE_KEY
          - name: STATIC_CONTAINER
            valueFrom:
              configMapKeyRef:
                key: STATIC_CONTAINER
                name: gabl-stage
          - name: UPLOADS_CONTAINER
            valueFrom:
              configMapKeyRef:
                key: UPLOADS_CONTAINER
                name: gabl-stage
          - name: STORAGE_ACCOUNT_NAME
            valueFrom:
              configMapKeyRef:
                key: STORAGE_ACCOUNT_NAME
                name: gabl-stage
          - name: CDN_URL
            valueFrom:
              configMapKeyRef:
                key: CDN_URL
                name: gabl-stage
          - name: LANDING_URL
            valueFrom:
              configMapKeyRef:
                key: LANDING_URL
                name: gabl-stage
          - name: IAP_TEST_MODE
            valueFrom:
              configMapKeyRef:
                key: IAP_TEST_MODE
                name: gabl-stage
          - name: API_KEY
            valueFrom:
              secretKeyRef:
                key: API_KEY
                name: api-key
          image: gabldock.azurecr.io/gabl_api:v0.0.0
          name: api-stage
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "160M"
              cpu: "150m"
            limits:
              memory: "250M"
              cpu: "200m"
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  labels:
    app: api-stage
  name: api-stage
  namespace: gabl-ingress
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: api-stage
status:
  loadBalancer: {}
