kubernetes/landing-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  labels:
    app: landing-prod
  name: landing-prod
  namespace: gabl-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-prod
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      labels:
        app: landing-prod
    spec:
      containers:
        - env:
          - name: NODE_ENV
            value: production
          image: gabl.azurecr.io/gabl_landing:v1.0.0-alpha.2
          name: landing-prod
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "64M"
              cpu: "100m"
            limits:
              memory: "128M"
              cpu: "100m"
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  labels:
    app: landing-prod
  name: landing-prod
  namespace: gabl-ingress
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: landing-prod
status:
  loadBalancer: {}
